# govtech-assignment

./: Assignment_Instructions.md
Section2/: .coverage  .gitignore  Makefile  README.md  pyproject.toml
Section2/.github/workflows/: dq_monitoring.yml
Section2/docs/: DATA_MODEL.md  RULE_MAPPING_QUICK_REFERENCE.md  SOLUTION.md
Section2/output/dq_dimension_scores/: .part-00000-f5ba2c17-2b35-4a1a-9f00-a18cfd8016b7-c000.csv.crc  part-00000-f5ba2c17-2b35-4a1a-9f00-a18cfd8016b7-c000.csv
Section2/output/dq_dimension_scores_full/: .part-00000-498b67c2-66f2-4752-affa-fd68444a0b94-c000.csv.crc  part-00000-498b67c2-66f2-4752-affa-fd68444a0b94-c000.csv
Section2/output/dq_dimension_scores_minimal/: .part-00000-0942cbbd-a6d1-4a89-9420-7e606e10dd90-c000.csv.crc  part-00000-0942cbbd-a6d1-4a89-9420-7e606e10dd90-c000.csv
Section2/output/dq_execution/: .part-00000-67ac10fd-03ec-4ccc-97c7-765928cf45fd-c000.csv.crc  part-00000-67ac10fd-03ec-4ccc-97c7-765928cf45fd-c000.csv
Section2/output/dq_rule_results/: .part-00000-a93114c8-d456-40a8-83e8-3076160e3f1a-c000.csv.crc  part-00000-a93114c8-d456-40a8-83e8-3076160e3f1a-c000.csv
Section2/scripts/: run_dq_analysis.py
Section2/src/: __init__.py  dimension_aggregator.py  evaluator.py
Section2/src/config/: config_loader.py  rules_config.yaml
Section2/src/pipeline/: orchestrator.py
Section2/src/rules/: __init__.py  base_rule.py  completeness_rules.py  conformity_rules.py  consistency_rules.py  (+3 more)
Section2/test_data/: grant_applications.csv
Section2/tests/: __init__.py  conftest.py  test_dimension_aggregator.py  test_evaluator.py
(+73 files in other folders)
